# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  camera.h  color.h  dielectric.h  gui.h  gui_listener.h  hit_record.h  hittable.h  hittable_list.h  image.h  lambertian.h  main.cpp  material.h  metal.h  ray.h  render_manager.h  renderer.h  sphere.h  util.h  vcpkg.json  vec3.h
